--- a/debian/control
+++ b/debian/control
@@ -168,7 +168,7 @@ Description: NVIDIA vdpau development files
 Package: nvidia-kernel-source
 Section: non-free/kernel
 Architecture: i386 amd64
-Depends: debhelper (>> 4.0.0), make, sed (>> 3.0), quilt (>= 0.46-7~),
+Depends: debhelper (>= 7), make, sed (>> 3.0), quilt (>= 0.46-7~),
  module-assistant, ${misc:Depends}
 Recommends: nvidia-glx (>= ${nvidia:Version}), kernel-package (>= 8.082), devscripts
 Conflicts: nvidia-kernel-src
