--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Randall Donald <rdonald@debian.org>,
  Andres Mejia <mcitadel@gmail.com>, Russ Allbery <rra@debian.org>
 Vcs-Svn: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-nvidia/packages/nvidia-graphics-drivers
-Build-Depends: debhelper (>= 7), sed (>> 3.0), libxext6, bzip2,
+Build-Depends: debhelper (>= 7), libxext6, bzip2,
  libc6-dev-i386 [amd64], lib32gcc1 [amd64], lib32z1 [amd64],
  ia32-libs (>= 20090804) [amd64]
 Standards-Version: 3.8.4
@@ -17,8 +17,6 @@ Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
 Depends: nvidia-kernel-${nvidia:Version}, ${shlibs:Depends}, ${misc:Depends}
 Suggests: nvidia-settings, nvidia-kernel-source (>= ${nvidia:Version})
-Conflicts: nvidia-glx-src
-Replaces: nvidia-glx-src
 Description: NVIDIA binary driver 32bit libs
  These binary drivers provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server. AGP, TV-out and
@@ -34,8 +32,6 @@ Package: nvidia-glx
 Architecture: i386 amd64
 Depends: nvidia-kernel-${nvidia:Version}, x11-common (>= 1:7.0.0), ${shlibs:Depends}, ${misc:Depends}
 Suggests: nvidia-settings, nvidia-kernel-source (>= ${nvidia:Version})
-Conflicts: nvidia-glx-src, nvidia-glx-dev (<< 1.0.8774-5)
-Replaces: nvidia-glx-src
 Description: NVIDIA binary Xorg driver
  These binary drivers provide optimized hardware 
  acceleration of  OpenGL applications via a direct-rendering X Server. 
@@ -168,11 +164,9 @@ Description: NVIDIA vdpau development files
 Package: nvidia-kernel-source
 Section: non-free/kernel
 Architecture: i386 amd64
-Depends: debhelper (>= 7), make, sed (>> 3.0), quilt (>= 0.46-7~),
+Depends: debhelper (>= 7), make, quilt (>= 0.46-7~),
  module-assistant, ${misc:Depends}
-Recommends: nvidia-glx (>= ${nvidia:Version}), kernel-package (>= 8.082), devscripts
-Conflicts: nvidia-kernel-src
-Replaces: nvidia-kernel-src
+Recommends: nvidia-glx (>= ${nvidia:Version}), kernel-package, devscripts
 Description: NVIDIA binary kernel module source
  This package builds the NVIDIA Xorg  binary kernel module 
  needed  by nvidia-glx. The drivers provide optimized hardware acceleration 
