Improve nvidia-glx bug reporting script
[ Andreas Beckmann ]
* debian/nvidia-glx.bug-script: new bug script that reports a bit of useful
  version and hardware information
* debian/control: bump debhelper B-D to (>= 7.2.3~) for dh_bugfiles
* debian/rules: use dh_bugfiles to install bug script


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@819 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -251,11 +251,9 @@ install: build-stamp build-kernel-stamp
 	#install -m 755 $(dirname)/usr/bin/nvidia-settings $(CURDIR)/debian/nvidia-settings/usr/bin/
 	#install -m 644 $(dirname)/usr/share/doc/nvidia-settings-user-guide.txt $(CURDIR)/debian/nvidia-settings/usr/share/doc/nvidia-settings
 
-
-	install $(CURDIR)/script $(CURDIR)/debian/nvidia-glx/usr/share/bug/nvidia-glx
-
 	dh_install -s
 	dh_lintian
+	dh_bugfiles
 
 
 # Must not depend on anything. This is to be called by
