--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Randall Donald <rdonald@debian.org>,
  Andres Mejia <mcitadel@gmail.com>, Russ Allbery <rra@debian.org>
 Vcs-Svn: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-nvidia/packages/nvidia-graphics-drivers
-Build-Depends: debhelper (>= 7), libxext6, bzip2,
+Build-Depends: debhelper (>= 7.2.3~), libxext6, bzip2,
  libc6-dev-i386 [amd64], lib32gcc1 [amd64], lib32z1 [amd64],
  ia32-libs (>= 20090804) [amd64]
 Standards-Version: 3.8.4
