--- a/debian/nvidia-glx-dev.preinst.in
+++ b/debian/nvidia-glx-dev.preinst.in
@@ -1,96 +1,35 @@
-#! /bin/sh
-# preinst script for nvidia-glx
+#!/bin/sh
+# preinst script for nvidia-glx-dev
 #
 # see: dh_installdeb(1)
 
 set -e
 
+# summary of how this script can be called:
+#        * <new-preinst> `install'
+#        * <new-preinst> `install' <old-version>
+#        * <new-preinst> `upgrade' <old-version>
+#        * <old-preinst> `abort-upgrade' <new-version>
+# for details, see http://www.debian.org/doc/debian-policy/ or
+# the debian-policy package
+
+# released versions: etch: 1.0.8776-4, lenny: 173.14.09-5
+
 case "$1" in
     install|upgrade)
-        # diversion transition
-	if [ -d /usr/share/nvidia-glx/diversions/ ] ; then
-		rm -f /usr/lib/libGL.so 
-	        rm -f /usr/lib/libGL.a 
-        	dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/libGL.so /usr/lib/libGL.so > /dev/null
-		dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/libGL.a  /usr/lib/libGL.a > /dev/null
 
-		rmdir  /usr/share/nvidia-glx/diversions/ || true
-		rmdir /usr/share/nvidia-glx || true
-
-	fi
-	
-	if [ -d /usr/share/nvidia-glx/diversions ] ; then 
-		rm -f /usr/lib/libGL.so 
-		rm -f /usr/lib/libGL.a
-	
-		dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/libGL.so /usr/lib/libGL.so > /dev/null
-		dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/libGL.a /usr/lib/libGL.a > /dev/null
-				
-
-                rmdir  /usr/share/nvidia-glx/diversions || true
-		rmdir /usr/share/nvidia-glx || true
-	fi				                
-						
-
-	if [ ! -d /usr/lib/nvidia ]; then
-		mkdir -p /usr/lib/nvidia || true
-	fi
-
-# to remove old old old gl header diversions
-
-
-	if [ -e /usr/share/nvidia-glx/diversions/gl.h ]; then
-	  if [ -e /usr/include/GL/gl.h ]; then 
-	  	rm -f /usr/include/GL/gl.h /usr/include/GL/glx.h /usr/include/GL/glxtokens.h
-	  fi		
-	  dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/gl.h /usr/include/GL/gl.h > /dev/null
-	  dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/glx.h /usr/include/GL/glx.h > /dev/null
-	  dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/glxext.h /usr/include/GL/glxext.h > /dev/null
-
-	  dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/gl.h /usr/include/GL/gl.h > /dev/null
-	  dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/glx.h /usr/include/GL/glx.h > /dev/null
-	  dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/glxext.h /usr/include/GL/glxext.h > /dev/null
-
-	fi
-        
-	# make sure these diversions don't exist anymore
-	if dpkg-divert --list /usr/lib/libGL.so | grep 'nvidia-glx-dev' > /dev/null ; then 
-		dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/lib/nvidia/libGL.so.xlibmesa /usr/lib/libGL.so > /dev/null
-	fi
-	if dpkg-divert --list /usr/lib/libGL.a | grep 'nvidia-glx-dev' > /dev/null ; then 
-		dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/lib/nvidia/libGL.a.xlibmesa /usr/lib/libGL.a > /dev/null
-	fi
-	if dpkg-divert --list /usr/X11R6/lib/libGL.so | grep 'nvidia-glx-dev' > /dev/null ; then  
-	       dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/X11R6/lib/nvidia/libGL.so.xlibmesa /usr/X11R6/lib/libGL.so > /dev/null
-	fi
-	if dpkg-divert --list /usr/X11R6/lib/libGL.so | grep 'nvidia-glx-dev' > /dev/null ; then 
-		dpkg-divert --remove --rename --package nvidia-glx-dev --divert /usr/X11R6/lib/nvidia/libGL.a.xlibmesa /usr/X11R6/lib/libGL.a > /dev/null	
-	fi
-#	dpkg-divert --add --rename --package nvidia-glx-dev --divert /usr/lib/nvidia/libGL.so.xlibmesa /usr/lib/libGL.so > /dev/null
-#	dpkg-divert --add --rename --package nvidia-glx-dev --divert /usr/lib/nvidia/libGL.so.xlibmesa /usr/lib/libGL.so > /dev/null
-#	rm /usr/lib/libGL.so || true
-	
-#	ln -s /usr/lib/libGL.so.#VERSION# /usr/lib/libGL.so || true
-	
-	
+	# <disabled since r93 = 1.0.8774-5>
 #	dpkg-divert --add --rename --package nvidia-glx-dev --divert /usr/lib/nvidia/libGL.a.xlibmesa /usr/lib/libGL.a > /dev/null
+	# </disabled since r93 = 1.0.8774-5>
 
-#	dpkg-divert --add --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/gl.h /usr/include/GL/gl.h > /dev/null
-#	dpkg-divert --add --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/glx.h /usr/include/GL/glx.h > /dev/null
-#	dpkg-divert --add --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/glxtokens.h /usr/include/GL/glxtokens.h > /dev/null
-
-#	dpkg-divert --add --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/gl.h /usr/include/GL/gl.h > /dev/null
-#	dpkg-divert --add --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/glx.h /usr/include/GL/glx.h > /dev/null
-#	dpkg-divert --add --rename --package nvidia-glx-dev --divert /usr/share/nvidia-glx/diversions/glxtokens.h /usr/include/GL/glxtokens.h > /dev/null
-
-  ;;
+    ;;
 
     abort-upgrade)
     ;;
 
     *)
         echo "preinst called with unknown argument \`$1'" >&2
-        exit 0
+        exit 1
     ;;
 esac
 
