Clean up obsolete diversions
[ Andreas Beckmann ]
* nvidia-glx: stop diverting /usr/lib/xorg/modules/extensions/libGLcore.so,
  was removed in Xorg 1.6, add Breaks: xserver-xorg-core (<< 2:1.6) instead
* nvidia-glx: stop diverting files not seen in etch or later:
  - /usr/lib/xorg/modules/extensions/libGLcore.a
  - /usr/lib/xorg/modules/extensions/libglx.a
* nvidia-glx: clean up diversion of /usr/lib/libGL.a (was not being created
  in etch or later), the file is provided by libgl1-mesa-swx11-dev which
  conflicts with nvidia-glx
* remove empty maintainer script nvidia-glx-dev.preinst.in


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@828 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -32,6 +32,7 @@ Package: nvidia-glx
 Architecture: i386 amd64
 Depends: nvidia-kernel-${nvidia:Version}, x11-common (>= 1:7.0.0), ${shlibs:Depends}, ${misc:Depends}
 Suggests: nvidia-settings, nvidia-kernel-source (>= ${nvidia:Version})
+Breaks: xserver-xorg-core (<< 2:1.6)
 Description: NVIDIA binary Xorg driver
  These binary drivers provide optimized hardware 
  acceleration of  OpenGL applications via a direct-rendering X Server. 
