--- a/debian/rules
+++ b/debian/rules
@@ -71,16 +71,15 @@ module-source-stamp: configure
 	cp -a NVIDIA-Linux/usr/src/nv/* debian/temp/modules/nvidia-kernel/
 	cp -a NVIDIA-Linux/usr/share/doc/NVIDIA_Changelog debian/temp/modules/nvidia-kernel/
 
-	# We don't want this makefile that doesn't work with kbuild
+	# We don't want these makefiles that don't work with kbuild
 	rm debian/temp/modules/nvidia-kernel/makefile
+	rm debian/temp/modules/nvidia-kernel/Makefile.nvidia
 
 	# We want both 32 and 64 bit versions of nv-kernel.o
+	# Do not use a name matching *.o to prevent accidental deletion by some clean target
 	cp -a NVIDIA-Linux-i386/usr/src/nv/nv-kernel.o debian/temp/modules/nvidia-kernel/nv-kernel.o.i386
 	cp -a NVIDIA-Linux-amd64/usr/src/nv/nv-kernel.o debian/temp/modules/nvidia-kernel/nv-kernel.o.x86_64
 	rm -f debian/temp/modules/nvidia-kernel/nv-kernel.o
-
-	# and then make Makefile.kbuild actually use our names
-	sed -i -e 's/nv-kernel.o$$/nv-kernel.o$$(NVARCH)/' debian/temp/modules/nvidia-kernel/Makefile.kbuild
 
 	# We have new conftest files that work purely with kbuild and don't require root
 	cp -a Makefile conftest.* patches.h debian/temp/modules/nvidia-kernel/
