--- a/debian.binary/control.template.in
+++ b/debian.binary/control.template.in
@@ -10,7 +10,7 @@ Homepage: http://www.nvidia.com/
 Package: nvidia-kernel-#KVERS#
 Architecture: i386 amd64
 Provides: nvidia-kernel-#VERSION#
-Depends: nvidia-kernel-common (>= 20050829), linux-image-#KVERS#
+Depends: nvidia-kernel-common, linux-image-#KVERS#
 Description: NVIDIA binary kernel module for Linux #KVERS#
  This package provides the non-free NVIDIA binary kernel module built for
  the Debian Linux kernel package.  This kernel module is required by the
