Reorganize package to allow use of 3.0 (quilt) format
[ Andreas Beckmann ]
* move files: debian.binary/ ==> debian/module/debian/,
  Makefile, conftest.*, patches.h ==> debian/module/
* debian/rules: adjust for debian/module/
* switch to source format 3.0 (quilt)
* debian/module/debian/: set source format 1.0, the module source "package"
  is shipped as .tar.bz2 and unpacked with tar, therefore no newer features
  can be used


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@853 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -17,8 +17,8 @@ TEMPLATES	:= $(wildcard debian/*.in)
 AUTOGEN		+= $(patsubst %.in,%,$(TEMPLATES))
 AUTOGEN		+= debian/libcuda1-ia32.symbols
 AUTOGEN		+= debian/nvidia-libvdpau1-ia32.symbols
-AUTOGEN		+= debian.binary/control.template
-AUTOGEN		+= debian.binary/changelog
+AUTOGEN		+= debian/module/debian/control.template
+AUTOGEN		+= debian/module/debian/changelog
 AUTOKEEP	 = debian/copyright
 AUTOCLEAN	 = $(filter-out $(AUTOKEEP),$(AUTOGEN))
 
@@ -61,11 +61,9 @@ module-source-stamp: configure
 	cp -a NVIDIA-Linux-amd64/usr/src/nv/nv-kernel.o debian/temp/modules/nvidia-kernel/nv-kernel.o.x86_64
 	rm -f debian/temp/modules/nvidia-kernel/nv-kernel.o
 
-	# We have new conftest files that work purely with kbuild and don't require root
-	cp -a Makefile conftest.* patches.h debian/temp/modules/nvidia-kernel/
-
-	# Prepare debian files for module package
-	cp -a debian.binary/* debian/temp/modules/nvidia-kernel/debian/
+	# Install a debian/ tree and new conftest files that work purely with kbuild
+	# and don't require root into the module package
+	cp -a debian/module/* debian/temp/modules/nvidia-kernel/
 	cp -a debian/copyright debian/temp/modules/nvidia-kernel/debian/
 
 	# Fix permissions
@@ -131,7 +129,7 @@ override_dh_strip:
 	-e 's{#URL_X86_64#}{$(url_x86_64)}g;' \
 	< $< > $@
 
-debian.binary/changelog: debian/changelog
+debian/module/debian/changelog: debian/changelog
 	sed 's/^nvidia-graphics-drivers/nvidia-kernel/g' $< > $@
 
 debian/nvidia-libvdpau1-ia32.symbols: debian/nvidia-libvdpau1.symbols.i386
