Documentation and minor debian/control updates
[ Andreas Beckmann ]
* debian/README*: remove reference to http://people.debian.org/~rdonald
* remove Randall Donald from Uploaders per his request
* debian/control:
  - remove dependency on x11-common, probably remained from the X11R6 time
  - reformat, syncronize, use more substvars
  - add Conflicts with nvidia-glx-legacy-* packages


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@855 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-kernel-source.README.Debian.in
+++ b/debian/nvidia-kernel-source.README.Debian.in
@@ -164,8 +164,7 @@ An old nvidia.o might be already loaded (run 'lsmod' to check) so
 do 'rmmod nvidia.o' to remove the module from memory.
 
 
-For any news on this package check http://people.debian.org/~rdonald and
-http://bugs.debian.org/nvidia-kernel-source
+For any news on this package check http://bugs.debian.org/nvidia-kernel-source
 
 
  -- Randall Donald <rdonald@debian.org>, Fri, 30 Apr 2004 19:02:04 -0700
