--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,9 @@ Source: nvidia-graphics-drivers
 Section: non-free/x11
 Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
-Uploaders: Randall Donald <rdonald@debian.org>,
- Andres Mejia <mcitadel@gmail.com>, Russ Allbery <rra@debian.org>
+Uploaders:
+ Andres Mejia <mcitadel@gmail.com>,
+ Russ Allbery <rra@debian.org>,
 Vcs-Svn: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-nvidia/packages/nvidia-graphics-drivers
 Build-Depends: debhelper (>= 7.2.3~), libxext6, bzip2,
@@ -17,41 +18,55 @@ Architecture: amd64
 Pre-Depends: libc6-i386 (>= 2.9-18)
 Depends: nvidia-kernel-${nvidia:Version}, ${shlibs:Depends}, ${misc:Depends}
 Suggests: nvidia-settings, nvidia-kernel-source (>= ${nvidia:Version})
+Conflicts:
+ nvidia-glx-legacy-71xx-ia32,
+ nvidia-glx-legacy-96xx-ia32,
+ nvidia-glx-legacy-173xx-ia32,
 Description: NVIDIA binary driver 32bit libs
  These binary drivers provide optimized hardware acceleration of
- OpenGL applications via a direct-rendering X Server. AGP, TV-out and
- flat panel displays are also supported.
+ OpenGL applications via a direct-rendering X Server.
+ AGP, PCIe, SLI, TV-out and flat panel displays are also supported.
  .
  This version only supports GeForce 6xxx and higher of the Geforce GPUs
- plus complimentary Quadros and nforce.
+ plus complimentary Quadros and nforce. Look at the legacy packages
+ for older cards.
  .
- See /usr/share/doc/nvidia-glx/README.txt.gz for a complete list 
- of supported GPUs and PCIIDs
+ See /usr/share/doc/nvidia-glx/README.txt.gz for a complete list
+ of supported GPUs and PCIIDs.
 
 Package: nvidia-glx
 Architecture: i386 amd64
-Depends: nvidia-kernel-${nvidia:Version}, x11-common (>= 1:7.0.0), ${shlibs:Depends}, ${misc:Depends}
+Depends: nvidia-kernel-${nvidia:Version}, ${shlibs:Depends}, ${misc:Depends}
 Suggests: nvidia-settings, nvidia-kernel-source (>= ${nvidia:Version})
 Breaks: xserver-xorg-core (<< 2:1.6)
+Conflicts:
+ nvidia-glx-legacy-71xx,
+ nvidia-glx-legacy-96xx,
+ nvidia-glx-legacy-173xx,
 Description: NVIDIA binary Xorg driver
- These binary drivers provide optimized hardware 
- acceleration of  OpenGL applications via a direct-rendering X Server. 
+ These binary drivers provide optimized hardware acceleration of
+ OpenGL applications via a direct-rendering X Server.
  AGP, PCIe, SLI, TV-out and flat panel displays are also supported.
  .
- Please see the nvidia-kernel-source package for building the kernel module
- required by this package. This will provide nvidia-kernel-<version>
+ Please see the nvidia-kernel-source package
+ for building the kernel module required by this package.
+ This will provide nvidia-kernel-${nvidia:Version}.
  .
- GPUs of Geforce 6xxx and above are supported. Look to the legacy packages 
+ This version only supports GeForce 6xxx and higher of the Geforce GPUs
+ plus complimentary Quadros and nforce. Look at the legacy packages
  for older cards.
- . 
- See /usr/share/doc/nvidia-glx/README.txt.gz for a complete list 
- of supported GPUs and PCIIDs
+ .
+ See /usr/share/doc/nvidia-glx/README.txt.gz for a complete list
+ of supported GPUs and PCIIDs.
 
 Package: nvidia-glx-dev
 Architecture: i386 amd64
 Depends: nvidia-glx (= ${binary:Version}), libx11-dev, ${misc:Depends}
 Provides: libgl-dev
-Conflicts: libgl-dev, mesa-common-dev
+Conflicts: libgl-dev, mesa-common-dev,
+ nvidia-glx-legacy-71xx,
+ nvidia-glx-legacy-96xx,
+ nvidia-glx-legacy-173xx,
 Replaces: libgl-dev
 Description: NVIDIA binary Xorg driver development files
  This package contains the NVIDIA binary Xorg driver
@@ -72,14 +87,14 @@ Replaces: nvidia-glx-ia32 (<< 180.51), nvidia-libvdpau-ia32,
  nvidia-vdpau-driver-ia32 (<< 190.53-3)
 Conflicts: nvidia-glx-ia32 (<< 180.51), nvidia-libvdpau-ia32,
  nvidia-vdpau-driver-ia32 (<< 190.53-3)
-Description: NVIDIA vdpau 32bit libraries
- These libraries provide the Video Decode and Presentation API for Unix
- (32 bit). They provide accelerated video playback (incl. H.264) for the 
- supported graphics cards.
+Description: NVIDIA vdpau 32-bit libraries
+ These libraries provide the Video Decode and Presentation API for Unix.
+ They provide accelerated video playback (incl. H.264) for the supported
+ graphics cards.
  .
  This package contains the VDPAU wrapper and trace libraries (32-bit).
  .
- See /usr/share/doc/nvidia-vdpau-driver-ia32/README.txt.gz 
+ See /usr/share/doc/nvidia-vdpau-driver-ia32/README.txt.gz
  for more information.
 
 Package: nvidia-libvdpau1
@@ -93,7 +108,7 @@ Replaces: nvidia-glx (<< 180.51), nvidia-libvdpau
 Conflicts: nvidia-glx (<< 180.51), nvidia-libvdpau
 Description: NVIDIA vdpau libraries
  These libraries provide the Video Decode and Presentation API for Unix.
- They provide accelerated video playback (incl. H.264) for the supported 
+ They provide accelerated video playback (incl. H.264) for the supported
  graphics cards.
  .
  This package contains the VDPAU wrapper and trace libraries.
@@ -169,12 +184,13 @@ Depends: debhelper (>= 7), make, quilt (>= 0.46-7~),
  module-assistant, ${misc:Depends}
 Recommends: nvidia-glx (>= ${nvidia:Version}), kernel-package, devscripts
 Description: NVIDIA binary kernel module source
- This package builds the NVIDIA Xorg  binary kernel module 
- needed  by nvidia-glx. The drivers provide optimized hardware acceleration 
- of OpenGL applications via a direct-rendering X Server AGP,
- PCIe, SLI, TV-out, and flat panel displays are also supported.
+ This package builds the NVIDIA Xorg binary kernel module
+ needed by nvidia-glx.
+ The binary drivers provide optimized hardware acceleration of
+ OpenGL applications via a direct-rendering X Server.
+ AGP, PCIe, SLI, TV-out and flat panel displays are also supported.
  .
- PLEASE read /usr/share/doc/nvidia-kernel-source/README.Debian for building
+ PLEASE read /usr/share/doc/nvidia-kernel-source/README.Debian.gz for building
  information.
 
 Package: libcuda1
@@ -195,8 +211,9 @@ Description: NVIDIA CUDA runtime library
  Supported NVIDIA devices include GPUs starting from GeForce 8 and Quadro FX
  series, as well as the Tesla computing processors.
  .
- Please see the nvidia-kernel-source package for building the kernel module
- required by this package. This will provide nvidia-kernel-<version>
+ Please see the nvidia-kernel-source package
+ for building the kernel module required by this package.
+ This will provide nvidia-kernel-${nvidia:Version}.
 
 Package: libcuda1-ia32
 Section: non-free/libs
@@ -217,8 +234,9 @@ Description: NVIDIA CUDA runtime library (32-bit)
  Supported NVIDIA devices include GPUs starting from GeForce 8 and Quadro FX
  series, as well as the Tesla computing processors.
  .
- Please see the nvidia-kernel-source package for building the kernel module
- required by this package. This will provide nvidia-kernel-<version>
+ Please see the nvidia-kernel-source package
+ for building the kernel module required by this package.
+ This will provide nvidia-kernel-${nvidia:Version}.
 
 Package: libcuda1-dev
 Section: non-free/libdevel
