--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -2,7 +2,7 @@ Source: nvidia-kernel
 Section: non-free/kernel
 Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
-Uploaders: Randall Donald <rdonald@debian.org>, Russ Allbery <rra@debian.org>
+Uploaders: Russ Allbery <rra@debian.org>
 Build-Depends: debhelper (>= 7)
 Standards-Version: 3.8.4
 Homepage: http://www.nvidia.com/
