Install the custom bug script in every binary package
[ Andreas Beckmann ]
* install the bug-script in all packages as well as in the binary modules
  packages built from nvidia-kernel-source


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@857 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -78,7 +78,7 @@ Description: NVIDIA binary Xorg driver development files
 Package: nvidia-kernel-source
 Section: non-free/kernel
 Architecture: i386 amd64
-Depends: debhelper (>= 7), make, quilt (>= 0.46-7~),
+Depends: debhelper (>= 7.2.3~), make, quilt (>= 0.46-7~),
  module-assistant, ${misc:Depends}
 Recommends: nvidia-glx (>= ${nvidia:Version}), kernel-package, devscripts
 Description: NVIDIA binary kernel module source
