--- a/debian/module/debian/rules
+++ b/debian/module/debian/rules
@@ -47,6 +47,7 @@ endif
 	dh_installdocs $(wildcard debian/changelog.nvidia-kernel-source*)
 	dh_installchangelogs NVIDIA_Changelog
 	dh_installmodules
+	dh_bugfiles
 	dh_strip
 	dh_compress
 	dh_fixperms
