--- a/debian/rules
+++ b/debian/rules
@@ -65,6 +65,7 @@ module-source-stamp: configure
 	# and don't require root into the module package
 	cp -a debian/module/* debian/temp/modules/nvidia-kernel/
 	cp -a debian/copyright debian/temp/modules/nvidia-kernel/debian/
+	cp -a debian/bug-script debian/temp/modules/nvidia-kernel/debian/
 
 	# Fix permissions
 	chmod -R a-sx,u=rwX,go=rX debian/temp/modules
@@ -99,6 +100,9 @@ override_dh_installchangelogs:
 
 override_dh_installinit:
 	dh_installinit -- start 20 2 3 4 5 .
+
+override_dh_bugfiles:
+	dh_bugfiles -A
 
 override_dh_gencontrol:
 	dh_gencontrol -- -V'nvidia:Version=$(version)'
